[tool.poetry]
name = "python-ed-fcad-uner"
version = "0.1.0"
description = ""
authors = ["nacho <nacho.novello@gmail.com>"]
readme = "README.md"
packages = [{include = "data_structures"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
